--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h2>Hello World III</h2>
+<p>I'm hoste wdith GitHub Pages.</p>
 </body>
 </html>
