--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<h2>Hello World III</h2>
+<h1>Hello World - This is Pål's masterpiece</h1>
 <p>I'm hoste wdith GitHub Pages.</p>
 </body>
 </html>
